--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -12,4 +12,5 @@ RUN pip3 install --upgrade pip && \
     pip3 install --no-cache-dir -r requirements.txt
 
 EXPOSE 8501
-CMD ["python3", "-m", "streamlit", "run", "Banking_Iya_Bola_App.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["python3", "-m", "streamlit", "run", "Banking_Iya_Bola_App_Full.py", "--server.port=8501", "--server.address=0.0.0.0"]
+
