--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,15 +1,11 @@
-FROM ubuntu:22.04
-
-# Install system + Python
-RUN apt-get update && \
-    apt-get install -y python3.10 python3-pip python3.10-dev build-essential portaudio19-dev && \
-    rm -rf /var/lib/apt/lists/*
+FROM python:3.10-slim
 
 WORKDIR /app
 COPY . /app
 
-RUN pip3 install --upgrade pip && \
-    pip3 install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y ffmpeg && \
+    pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8501
-CMD ["python3", "-m", "streamlit", "run", "Banking_Iya_Bola_App_Full.py", "--server.port=8501", "--server.address=0.0.0.0"]
+
+CMD ["streamlit", "run", "Banking_Iya_Bola_App_Full.py", "--server.port=8501", "--server.address=0.0.0.0"]
