--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,16 @@
-# --- Core runtime ---
 streamlit==1.38.0
 pandas==2.2.3
 numpy==1.26.4
 plotly==5.24.1
-langdetect==1.0.9
 fasttext==0.9.3
-
-# --- Optional voice + audio ---
 gTTS==2.5.1
+pydub==0.25.1
 SpeechRecognition==3.10.4
-
-# --- Utility libraries ---
+langdetect==1.0.9
+huggingface_hub==0.25.3
+transformers==4.43.2
+torch==2.3.1
+torchaudio==2.3.1
 requests==2.32.3
 python-dotenv==1.0.1
-torch
-torchaudio
-transformers
-huggingface_hub
-requests
-
-# --- Visualization (optional for reports / dashboards) ---
-matplotlib==3.9.2
-seaborn==0.13.2
-
-
+googletrans==4.0.0rc1
