--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gTTS==2.5.1
 pydub==0.25.1
 SpeechRecognition==3.10.4
 langdetect==1.0.9
-huggingface_hub==0.25.3
+huggingface_hub
 transformers==4.43.2
 torch==2.3.1
 torchaudio==2.3.1
