--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit==1.38.0
-pandas==2.2.3
-numpy==1.26.4
-plotly==5.24.1
-fasttext==0.9.3
-gTTS==2.5.1
-pydub==0.25.1
-SpeechRecognition==3.10.4
-langdetect==1.0.9
+streamlit
+pandas
+numpy
+plotly
+fasttext
+gTTS
+pydub
+SpeechRecognition
+langdetect
 huggingface_hub
-transformers==4.43.2
-torch==2.3.1
-torchaudio==2.3.1
-requests==2.32.3
-python-dotenv==1.0.1
-googletrans==4.0.0rc1
+transformers
+torch
+torchaudio
+requests
+python-dotenv
+googletrans
